teste de application.properties 10